# arkworks_learn

./: Cargo.toml  README.md
ripp/ip_proofs/src/applications/: groth16_aggregation.rs
src/: main.rs
